--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,18 @@ html {
 /* Set the margin to 0 to make sure the page stretches all the way to the edge of the browser window. */
 body {
   margin: 0;
+  font-family: 'Playfair Display', serif;
+
+
 }
 
 header, footer {
-  background-color: #ffa500;
+  background-color: #0d3b66;
   text-align: center;
 /*  min-width: 500px; */
 }
 header {
-  font-family: Work Sans;
+  font-family: 'Playfair Display', serif;
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -32,7 +35,7 @@ main {
   align-content: center;
 }
 h1 {
-  font-family: Poppins;
+  font-family: 'Playfair Display', serif;
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -40,7 +43,7 @@ h1 {
 }
 
 h2 {
-  font-family: Poppins;
+  font-family: 'Playfair Display', serif;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.3px;
@@ -63,7 +66,7 @@ img {
 .bio {
   color: #ffffff;
   font-size: 24px;
-  font-family: 'Work Sans';
+  font-family: 'Playfair Display', serif;
 }
 .buttonBox {
   display: flex;
@@ -113,7 +116,7 @@ img {
 
 .mins {
   display: inline-block;
-  font-family: Poppins;
+  font-family: 'Playfair Display', serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -124,7 +127,7 @@ img {
 }
 
 .description {
-  font-family: Work Sans;
+  font-family: 'Playfair Display', serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 1.29;
