--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,24 @@ a:link {
 /*  min-width: 500px; */
   margin: auto;
 }
+@media all and (max-width:700px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+  .description {
+    font-size: 18px;
+  }
+}
+@media all and (max-width:700px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+  img {
+    height: 40vh;
+  }
+}
+
+
 
 footer {
   margin-top: 44px;
