--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html {
 body {
   margin: 0;
   font-family: 'Playfair Display', serif;
-  background-color: #faf0ca;
+  background-color: #432818;
 
 }
 
