--- a/css/style.css
+++ b/css/style.css
@@ -48,15 +48,13 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #edede9;
+  color: #ffa500;
   padding: 10px 0px 10px 10px;
 }
 
 img {
   width: 100%;
-  height: 50vh;
-  object-fit: cover;
-  object-position: center top;
+  height: auto;
 }
 .wrapper {
     max-width: 1150px;
@@ -128,7 +126,7 @@ a:link {
   font-weight: 500;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #edede9;
+  color: #4a4a4a;
   position: relative;
   bottom: 5px;
 }
@@ -140,7 +138,7 @@ a:link {
   line-height: 1.29;
   letter-spacing: 0.1px;
   text-align: left;
-  color: #edede9;
+  color: #4a4a4a;
   padding: 10px 0px 10px 10px;
   border-top: 1px solid #4a4a4a;
 }
